--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <html>
 <head>
     <title></title>
-    <script type="text/javascript">
+<!--    <script type="text/javascript">
         var LHCChatboxOptions = {hashchatbox:'empty',identifier:'default',status_text:'Chatbox'};
         (function() {
             var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
             po.src = '//localhost:57738/index.php/chatbox/getstatus/(position)/bottom_right/(top)/300/(units)/pixels/(width)/300/(theme)/2/(height)/300/(chat_height)/220';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+        })();
+    </script>-->
+    <script type="text/javascript">
+        var LHCChatboxOptions = {hashchatbox:'empty',identifier:'default',status_text:'Chatbox'};
+        (function() {
+            var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+            po.src = '//sultanrahi.ninja/index.php/chatbox/getstatus/(position)/bottom_right/(top)/300/(units)/pixels/(width)/300/(theme)/6/(height)/300/(chat_height)/220';
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
         })();
     </script>
