--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
             po.src = '//localhost:57738/index.php/chatbox/getstatus/(position)/bottom_right/(top)/300/(units)/pixels/(width)/300/(theme)/2/(height)/300/(chat_height)/220';
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
         })();
-    </script>-->
+    </script>
     <script type="text/javascript">
         var LHCChatboxOptions = {hashchatbox:'empty',identifier:'default',status_text:'Chatbox'};
         (function() {
             var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
             po.src = '//sultanrahi.ninja/index.php/chatbox/getstatus/(position)/bottom_right/(top)/300/(units)/pixels/(width)/300/(theme)/6/(height)/300/(chat_height)/220';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+        })();
+    </script>-->
+    <script type="text/javascript">
+        var LHCBROWSEOFFEROptions = {};
+        (function() {
+            var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+            var referrer = (document.referrer) ? encodeURIComponent(document.referrer.substr(document.referrer.indexOf('://')+1)) : '';
+            var location  = (document.location) ? encodeURIComponent(window.location.href.substring(window.location.protocol.length)) : '';
+            po.src = '//sultanrahi.ninja/index.php/browseoffer/getstatus/(size)/450/(height)/450/(units)/pixels/(showoverlay)/true?r='+referrer+'&l='+location;
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
         })();
     </script>
