--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po
 </script>
 </head>
 <body>
-
+<a href="next.html">asdsa</a>
     Otex Connect - Chat Demo
 
 </body>
