--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po
 </head>
 <body>
 <a href="next.html">asdsa</a>
-    Otex Connect - Chat Demo
+     - Chat Demo
 
 </body>
 </html>
