--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <title></title>
 <script type="text/javascript">
 var LHCChatOptions = {};
-LHCChatOptions.opt = {widget_height:340,widget_width:300,popup_height:520,popup_width:500};
+LHCChatOptions.opt = {widget_height:,widget_width:,popup_height:,popup_width:};
 (function() {
 var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
 var referrer = (document.referrer) ? encodeURIComponent(document.referrer.substr(document.referrer.indexOf('://')+1)) : '';
 var location  = (document.location) ? encodeURIComponent(window.location.href.substring(window.location.protocol.length)) : '';
-po.src = '//localhost:57740/index.php/chat/gettarget?r='+referrer+'&l='+location;
+po.src = '//localhost:57740/index.php/chat/getstatus/(click)/internal/(position)/bottom_right/(ma)/br/(check_operator_messages)/true/(top)/350/(units)/pixels/(leaveamessage)/true/(theme)/2/(noresponse)/true?r='+referrer+'&l='+location;
 var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
 })();
 </script>
