--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title></title>
 <script type="text/javascript">
 var LHCChatOptions = {};
-LHCChatOptions.opt = {widget_height:,widget_width:,popup_height:,popup_width:};
+LHCChatOptions.opt = 0;
 (function() {
 var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
 var referrer = (document.referrer) ? encodeURIComponent(document.referrer.substr(document.referrer.indexOf('://')+1)) : '';
