--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title></title>
 <script type="text/javascript">
 var LHCChatOptions = {};
-LHCChatOptions.opt = 0;
+LHCChatOptions.opt = {widget_height:0,widget_width:0,popup_height:0,popup_width:0};
 (function() {
 var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
 var referrer = (document.referrer) ? encodeURIComponent(document.referrer.substr(document.referrer.indexOf('://')+1)) : '';
