--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po
 </script>
 </head>
 <body>
-<a href="next.html">asdsa</a>
+<a href="next.html">Hellow </a>
      - Chat Demo
 
 </body>
